# tenant-isolation-audit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/tenant_isolation_audit/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_tenant_isolation_audit.py
